Add moderation system

--- a/src/pages/code-of-conduct.mdx
+++ b/src/pages/code-of-conduct.mdx
@@ -106,6 +106,28 @@ This code of conduct and its related procedures also applies to unacceptable beh
 
 ## **11. Moderation system**
 
+11.1 Create with integrity.
+
+11.2 User can have following moderation states:
+
+11.2.1 In moderation. Our moderation team checks your profile for Code of Conduct violations. During this time you won’t be able to mint tokens, upload assets, buy, and sell tokens.
+
+11.2.2 Temporarily restricted. Moderation team can temporarily restrict you from minting tokens and publishing assets if foul play, system abuse or Code of Conduct violations on your part will be suspected.
+
+11.2.3 Blocked. You will be permanently banned from the platform if you violate our Code of Conduct.
+
+11.3 Asset can have following moderation states:
+
+11.3.1 In moderation. After you upload an asset our moderation team checks it for errors and Code of Conduct violations. If the asset passes moderation successfully, it is published and becomes available for everyone. If it fails, our moderation team tries to contact the asset creator.
+
+11.3.2 Blocked. Asset will be blocked if it violates our Code of Conduct. Asset will be hidden from other users and won’t be available in the editor for token creation.
+
+11.4 Token can have following moderation states:
+
+11.4.1 In moderation. Our moderation team checks your token for Code of Conduct violations.
+
+11.4.2 Blocked. Token will be blocked if it violates our Code of Conduct. It won’t be available for listing and will be hidden from other users.
+
 ## **12. Contact info**
 
 If you believe someone is violating the code of conduct, we ask that you report it by emailing [support@contter.com](mailto:support@contter.com).
