--- a/src/pages/code-of-conduct.mdx
+++ b/src/pages/code-of-conduct.mdx
@@ -155,6 +155,6 @@ export default ({ children }) => (
     <Head>
       <title>Code of Conduct – Contter</title>
     </Head>
-    {children}
+    <div className="conduct">{children}</div>
   </Page>
 );
